apps/base/it-tools/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      serviceAccountName: it-tools
      containers:
      - name: it-tools
        image: corentinth/it-tools:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          timeoutSeconds: 1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
