apps/base/it-tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tools-svc
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: it-tools
