apps/base/it-tools/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-it-tools
  namespace: it-tools
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - it-tools.prod.server.home
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - it-tools.prod.server.home
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tools-tls
